--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>chmod calculator</title>
+  <title>Chmod 计算器</title>
   <style>
     :root {
       --txt: #1A1A1A;
