--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <link rel="manifest" href="./manifest.json">
   <title>Chmod 计算器</title>
   <style>
     :root {
