--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ chmod ${roleValSem(user)}${roleValSem(group)}${roleValSem(other)} [filename]`
 
     // 注册一个啥也不干的服务
     if('serviceWorker' in navigator)
-      navigator.serviceWorker.register('./sw.js', { scope: '/' })
+      navigator.serviceWorker.register('./sw.js')
     else
       console.log('不能注册服务')
   </script>
